# VesuviusChallengeInkDetection

./: .gitignore  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml  run.sh  update-model-weights.sh
.devcontainer/: devcontainer.json
scripts/: exp000.py  exp001.py  exp002.py  exp003.py  exp004.py  exp005.py  exp006.py  exp007.py  exp008.py  exp009.py  exp010.py  exp011.py  exp012.py  exp013.py  exp014.py  exp015.py  exp016.py  exp017.py  exp018.py  exp019.py  exp020.py  exp021.py  exp022.py  exp023.py  exp024.py  exp025.py  exp026.py  exp027.py  exp028.py  exp029.py  exp029_2.py  exp030.py  exp031.py  exp032.py  exp032_2.py  exp032_3.py  exp032_4.py  exp032_5.py  exp032_6.py  exp033.py  (+50 more)
src/: augmentations.py  preprocess.py  train_utils.py
src/losses/: soft_dice_loss.py
